# hometools

./: Cargo.toml
src/: config.rs  lib.rs  server.rs  wol.rs
static/: custom.css
templates/: base.html  crash.html  index.html  not-found.html  tools.html
