[package]
name = "hometools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = "0.12.1"
axum = "0.6.20"
hex = "0.4.3"
password-hash = { version = "0.5.0", features = ["rand_core", "alloc"] }
scrypt = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.2"
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tower-sessions = "0.2.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bin]]
name = "hometools"
path = "src/bin/hometools.rs"
